{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 230,
  "lineage": "e123419c-970d-1a1e-6e19-9f86e964e3a7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:network-acl/acl-08cad8ca7b0bf13cd",
            "default_network_acl_id": "acl-08cad8ca7b0bf13cd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08cad8ca7b0bf13cd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "616293267995",
            "region": "ap-southeast-2",
            "subnet_ids": [
              "subnet-03391020ceecb526b",
              "subnet-0d56121d89530ad6c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:route-table/rtb-03740043ff2cca359",
            "default_route_table_id": "rtb-03740043ff2cca359",
            "id": "rtb-03740043ff2cca359",
            "owner_id": "616293267995",
            "propagating_vgws": null,
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:security-group/sg-0177d0a9fbf42b49c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0177d0a9fbf42b49c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "616293267995",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0333ab6628ddb34",
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:elastic-ip/eipalloc-0c0333ab6628ddb34",
            "domain": "vpc",
            "id": "eipalloc-0c0333ab6628ddb34",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-239-168-67.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.239.168.67",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:internet-gateway/igw-08084213612441c90",
            "id": "igw-08084213612441c90",
            "owner_id": "616293267995",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0333ab6628ddb34",
            "association_id": "eipassoc-01a70137c678890a3",
            "connectivity_type": "public",
            "id": "nat-05a8c129cdd73de5e",
            "network_interface_id": "eni-07eec475165f44bfb",
            "private_ip": "172.0.0.14",
            "public_ip": "13.239.168.67",
            "region": "ap-southeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03391020ceecb526b",
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c56e21520c0fdf51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05a8c129cdd73de5e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-01c56e21520c0fdf5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616293267995",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-01c56e21520c0fdf5"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08084213612441c90",
            "id": "r-rtb-0d148edd9f82e722c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0d148edd9f82e722c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616293267995",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0d148edd9f82e722c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:route-table/rtb-01c56e21520c0fdf5",
            "id": "rtb-01c56e21520c0fdf5",
            "owner_id": "616293267995",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616293267995",
            "id": "rtb-01c56e21520c0fdf5",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:route-table/rtb-0d148edd9f82e722c",
            "id": "rtb-0d148edd9f82e722c",
            "owner_id": "616293267995",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616293267995",
            "id": "rtb-0d148edd9f82e722c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e89ef03bd8a4143",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-01c56e21520c0fdf5",
            "subnet_id": "subnet-0d56121d89530ad6c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcf30abd68605eb0",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-01c56e21520c0fdf5",
            "subnet_id": "subnet-0a042ec17b39cdff6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4b57fff8322c40d",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0d148edd9f82e722c",
            "subnet_id": "subnet-03391020ceecb526b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c62434f762df8b97",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0d148edd9f82e722c",
            "subnet_id": "subnet-04be26c0e1bed7193"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:subnet/subnet-0d56121d89530ad6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.0.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d56121d89530ad6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616293267995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616293267995",
            "id": "subnet-0d56121d89530ad6c",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:subnet/subnet-0a042ec17b39cdff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.0.1.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a042ec17b39cdff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616293267995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616293267995",
            "id": "subnet-0a042ec17b39cdff6",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:subnet/subnet-03391020ceecb526b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03391020ceecb526b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616293267995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616293267995",
            "id": "subnet-03391020ceecb526b",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:subnet/subnet-04be26c0e1bed7193",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04be26c0e1bed7193",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616293267995",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08c73a3803fea944a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "616293267995",
            "id": "subnet-04be26c0e1bed7193",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:616293267995:vpc/vpc-08c73a3803fea944a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/23",
            "default_network_acl_id": "acl-08cad8ca7b0bf13cd",
            "default_route_table_id": "rtb-03740043ff2cca359",
            "default_security_group_id": "sg-0177d0a9fbf42b49c",
            "dhcp_options_id": "dopt-0a538d4d64723cf47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c73a3803fea944a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03740043ff2cca359",
            "owner_id": "616293267995",
            "region": "ap-southeast-2",
            "tags": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hieult-eks-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}